# muhi-simple-raylib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Makefile  Readme.md  main.cpp  vcpkg.json
global/: constants.h
sources/: constants.h  main.cpp
